# astrowind

./: .gitignore  .npmrc  .prettierignore  .stackblitzrc  BLOG_REDESIGN_CHANGES.md  CASE_STUDY_REFACTORING.md  CITY_PAGES_IMPLEMENTATION.md  FOOTER_REDESIGN_SUMMARY.md  LICENSE.md  README.md  SEO_OPTIMIZATION_REPORT.md  WHATSAPP_INTEGRATION.md  astro.config.ts  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.codacy/: codacy.yaml
.github/workflows/: actions.yaml  blog-generator.yml  weekly-post.yml
public/: _headers  robots.txt  sw.js
scripts/: MIGRATION_GEMINI.md  README.md  TESTING.md  generate-post.js  main.py  n8n-blog-generator.json  pyproject.toml  screenshot-hero.mjs  test_blog_generator.py
scripts/.prefect/: prefect.db  prefect.db-shm
scripts/blog_generator/: __init__.py  __main__.py  config.py  content.py  formatter.py  github.py  image.py  research.py  types.py  utils.py
src/: assets.d.ts  config.yaml  env.d.ts  navigation.ts  types.d.ts
src/components/: CaseStudyCard.astro  CustomStyles.astro  Logo.astro
src/content/: config.ts
src/data/: cities.ts  jobs.ts
src/layouts/: CityLayout.astro  LandingLayout.astro  Layout.astro  MarkdownLayout.astro
src/pages/: 404.astro  about.astro  astro-site.astro  business-automation.astro  careers.astro  case-studies.astro  contact.astro  content-marketing.astro  digital-marketing.astro  django-development.astro  index copy.astro  index.astro  it-support.astro  logo-design.astro  mobile-app.astro  pricing.astro  privacy.md  rss.xml.ts  seo.astro  terms.md  (+8 more)
(+181 files in other folders)
