[project]
name = "blog-generator"
version = "1.0.0"
description = "Automated blog post generator for Criztec Technologies using Prefect, OpenAI, and Context7"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.1.11",
    "openai>=1.59.3",
    "PyGithub>=2.5.0",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.8.4", "pyright>=1.1.390"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501", # line too long (handled by formatter)
    "S101", # assert used (ok for type narrowing)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
